test/typechecker/fail/type_access_struct.fu
struct Foo { i: i32 }
fun test() {
    const x : Foo.i = 3;
}
